# flow-steam-launcher

./: .gitignore  pyproject.toml  requirements-dev.txt  requirements.txt
src/: plugin.json
src/steam_search/: __main__.py  methods.py  plugin.py  results.py
